# ens

./: .gitattributes  Cargo.toml
crates/ens/: Cargo.toml
crates/ens/examples/: change_detection.rs  events.rs  resources.rs
crates/ens/macros/: Cargo.toml
crates/ens/macros/src/: component.rs  lib.rs  query_data.rs  query_filter.rs  states.rs
crates/ens/src/: access.rs  archetype.rs  bundle.rs  change_detection.rs  component.rs  event.rs  lib.rs  removal_detection.rs
crates/ens/src/entity/: hash.rs  map_entities.rs  mod.rs
crates/ens/src/query/: access.rs  builder.rs  fetch.rs  filter.rs  iter.rs  mod.rs  par_iter.rs  state.rs  world_query.rs
crates/ens/src/schedule/: .schedule.rs.swp  condition.rs  config.rs  graph_utils.rs  mod.rs  schedule.rs  set.rs  state.rs
crates/ens/src/schedule/executor/: mod.rs  multi_threaded.rs  simple.rs  single_threaded.rs
crates/ens/src/storage/: blob_vec.rs  resource.rs  sparse_set.rs  table.rs
crates/ens/src/system/: .mod.rs.swp  adapter_system.rs  combinator.rs  exclusive_function_system.rs  exclusive_system_param.rs  function_system.rs  mod.rs  query.rs  system.rs  system_name.rs  system_param.rs  system_registry.rs
crates/ens/src/system/commands/: mod.rs  parallel_scope.rs
crates/ens/src/world/: command_queue.rs  deferred_world.rs  entity_ref.rs  error.rs  identifier.rs  mod.rs  spawn_batch.rs  unsafe_world_cell.rs  world_cell.rs
crates/ens_app/: Cargo.toml
crates/ens_app/src/: app.rs  lib.rs  main_schedule.rs  plugin.rs  plugin_group.rs  schedule_runner.rs  task_pool_plugin.rs
crates/ens_compile_fail_tests/: Cargo.toml
crates/ens_compile_fail_tests/tests/ui/: entity_ref_mut_lifetime_safety.rs  query_exact_sized_iterator_safety.rs  query_exact_sized_iterator_safety.stderr  query_iter_combinations_mut_iterator_safety.rs  query_iter_combinations_mut_iterator_safety.stderr  query_iter_many_mut_iterator_safety.rs  query_iter_many_mut_iterator_safety.stderr  query_lifetime_safety.rs  query_to_readonly.rs  query_transmute_safety.rs  system_param_derive_readonly.rs  system_param_derive_readonly.stderr  system_query_get_lifetime_safety.rs  system_query_get_many_lifetime_safety.rs  system_query_get_many_mut_lifetime_safety.rs  system_query_iter_lifetime_safety.rs  system_query_iter_many_mut_lifetime_safety.rs  system_query_set_get_lifetime_safety.rs  system_query_set_iter_lifetime_safety.rs  system_state_get_lifetime_safety.rs  system_state_iter_lifetime_safety.rs  system_state_iter_mut_overlap_safety.rs  system_state_iter_mut_overlap_safety.stderr  world_query_derive.rs  world_query_derive.stderr
crates/ens_core/: Cargo.toml
crates/ens_core/src/: lib.rs  name.rs  task_pool_options.rs
crates/ens_derive/: Cargo.toml
crates/ens_derive/src/: app_plugin.rs  ens_main.rs  lib.rs
crates/ens_diagnostic/: Cargo.toml
crates/ens_diagnostic/src/: diagnostic.rs  frame_time_diagnostics_plugin.rs  lib.rs  log_diagnostics_plugin.rs
crates/ens_dylib/: Cargo.toml
crates/ens_dylib/src/: lib.rs
crates/ens_dynamic_plugin/: Cargo.toml
crates/ens_dynamic_plugin/src/: lib.rs  loader.rs
crates/ens_hierarchy/: Cargo.toml
crates/ens_hierarchy/src/: child_builder.rs  events.rs  hierarchy.rs  lib.rs  query_extension.rs  valid_parent_check_plugin.rs
crates/ens_hierarchy/src/components/: children.rs  parent.rs
crates/ens_internal/: Cargo.toml
crates/ens_internal/src/: default_plugins.rs  lib.rs
crates/ens_macro_utils/: Cargo.toml
crates/ens_macro_utils/src/: ens_manifest.rs  fq_std.rs  lib.rs
crates/ens_macros_compile_fail_tests/: Cargo.toml
crates/ens_ptr/: Cargo.toml
crates/ens_ptr/src/: lib.rs
crates/ens_tasks/: Cargo.toml
crates/ens_tasks/examples/: busy_behavior.rs  idle_behavior.rs
crates/ens_tasks/src/: lib.rs  single_threaded_task_pool.rs  slice.rs  task.rs  task_pool.rs  task_pool_options.rs  thread_executor.rs  usages.rs
crates/ens_tasks/src/iter/: mod.rs
crates/ens_time/: Cargo.toml
crates/ens_time/src/: common_conditions.rs  lib.rs  real.rs  stopwatch.rs  time.rs  timer.rs
crates/ens_utils/: Cargo.toml
crates/ens_utils/macros/: Cargo.toml
crates/ens_utils/macros/src/: lib.rs
crates/ens_utils/src/: .lib.rs.swp  default.rs  hash.rs  intern.rs  label.rs  lib.rs  short_names.rs  syncunsafecell.rs
tools/ci/src/: main.rs
