[workspace]
resolver = "2"
version = "0.14.0-dev"
edition = "2021"
categories = ["ecs"]
description = "A modular ecs framework"
homepage = "https://github.com/AxiomaticSematnics/ens"
keywords = ["game", "engine", "gamedev", "graphics", "bevy"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AxiomaticSemantics/ens"
documentation = "https://docs.rs/ens"
rust-version = "1.76.0"
exclude = [
  "benches",
  "tools",
  "crates/ens_compile_fail_tests",
  "crates/ens_macros_compile_fail_tests",
]
members = [
  "crates/*",
  "tools/ci",
  "tools/build-templated-pages",
]

#[package]
name = "ens_ecs"

[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
#TODO(rust 1.77): enable `ref_as_ptr`
# ref_as_ptr = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"

#[package.metadata.docs.rs]
#cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
