[package]
name = "ens"
version = "0.14.0-dev"
edition = "2021"
description = "Bevy Engine's entity component system"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["ecs", "game", "bevy"]
categories = ["game-engines", "data-structures"]

[features]
entity_mapper = []
serialize = ["dep:serde"]
trace = []
events = []
multi-threaded = ["ens_tasks/multi-threaded"]
default = []

[dependencies]
ens_ptr = { path = "../ens_ptr", version = "0.14.0-dev" }
ens_tasks = { path = "../ens_tasks", version = "0.14.0-dev" }
ens_utils = { path = "../ens_utils", version = "0.14.0-dev" }
ens_macros = { path = "macros", version = "0.14.0-dev" }

petgraph = "0.6"
bitflags = "2.3"
concurrent-queue = "2.4.0"
fixedbitset = "0.4.2"
rustc-hash = "1.1"
serde = { version = "1", optional = true }
thiserror = "1.0"
nonmax = "0.5"
log = "0.4.21"

[dev-dependencies]
static_assertions = "1.1.0"

[[example]]
name = "events"
path = "examples/events.rs"

[[example]]
name = "resources"
path = "examples/resources.rs"

[[example]]
name = "change_detection"
path = "examples/change_detection.rs"

[lints]
workspace = true
