[package]
name = "ens"
version = "0.14.0-dev"
edition = "2021"
description = "Ens ECS"
homepage = "https://github.com/AxiomaticSemantics/ens"
repository = "https://github.com/AxiomaticSemantics/ens"
license = "MIT OR Apache-2.0"
keywords = ["ecs"]
categories = ["data-structures"]

[features]
non_send = []
entity_hash = []
derive_macros = ["ens_macros"]
serialize = ["serde"]
system_registry = []
change_detection = ["ens_macros?/change_detection"]
parallel_scope = ["ens_utils/parallel"]
component_hooks = []
run_conditions = []
events = ["ens_macros?/events"]
compute_task_pool = ["ens_tasks/compute_task_pool"]
multi-threaded = ["ens_tasks/multi-threaded", "ens_tasks/compute_task_pool", "concurrent-queue"]
single-threaded = ["ens_tasks/single-threaded"]
simple = ["ens_tasks/simple"]
log = ["dep:log"]
trace = []
untyped_access = []

default = ["multi-threaded", "derive_macros"]

[dependencies]
ens_ptr = { path = "../ens_ptr", version = "0.14.0-dev" }
ens_tasks = { path = "../ens_tasks", version = "0.14.0-dev" }
ens_utils = { path = "../ens_utils", version = "0.14.0-dev" }
ens_macros = { path = "macros", optional = true, version = "0.14.0-dev" }

petgraph = "0.6"
bitflags = "2.3"
concurrent-queue = {version = "2.4.0", optional = true }
fixedbitset = "0.4.2"
serde = { version = "1", optional = true }
rustc-hash = { version = "1.1", optional = true }
thiserror = "1.0"
nonmax = "0.5"
log = { version = "0.4", optional = true }

[dev-dependencies]
static_assertions = "1.1.0"
rand = "0.8"

[[example]]
name = "events"
path = "examples/events.rs"

[[example]]
name = "resources"
path = "examples/resources.rs"

[[example]]
name = "change_detection"
path = "examples/change_detection.rs"

[lints]
workspace = true
