[package]
name = "ens_app"
version = "0.14.0-dev"
edition = "2021"
description = "Provides core App functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
events = ["ens/events"]
states = ["ens/states"]
derive = ["ens_derive"]
startup = []
loop_wait = []
sub_app = []
default = []

[dependencies]
# bevy
ens = { path = "../ens", version = "0.14.0-dev" }
ens_utils = { path = "../ens_utils", version = "0.14.0-dev" }
ens_tasks = { path = "../ens_tasks", version = "0.14.0-dev" }
ens_derive = { path = "../ens_derive", optional = true, version = "0.14.0-dev" }

# other
downcast-rs = "1.2.0"
thiserror = "1.0"
log = "0.4.21"

[lints]
workspace = true
