[package]
name = "ens_core"
version = "0.14.0-dev"
edition = "2021"
description = "Provides core functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
serialize = ["entity_name", "dep:serde"]
entity_name = []

[dependencies]
# ens
ens = { path = "../ens", version = "0.14.0-dev", features = [] }
ens_app = { path = "../ens_app", version = "0.14.0-dev", features = [] }
ens_utils = { path = "../ens_utils", version = "0.14.0-dev" }

# other
log = "0.4.21"
serde = { version = "1.0", feature = ["derive"], optional = true }

[dev-dependencies]
ens_tasks = { path = "../ens_tasks", version = "0.14.0-dev" }
crossbeam-channel = "0.5.0"

[lints]
workspace = true
