[package]
name = "ens_diagnostic"
version = "0.14.0-dev"
edition = "2021"
description = "Provides diagnostic functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
# Disables diagnostics that are unsupported when Bevy is dynamically linked
dynamic_linking = []

[dependencies]
# bevy
ens = { path = "../ens", version = "0.14.0-dev" }
ens_app = { path = "../ens_app", version = "0.14.0-dev" }
ens_core = { path = "../ens_core", version = "0.14.0-dev" }
ens_time = { path = "../ens_time", version = "0.14.0-dev" }
ens_utils = { path = "../ens_utils", version = "0.14.0-dev" }

const-fnv1a-hash = "1.1.0"
env_logger = "0.11.3"
log = "0.4.21"

[lints]
workspace = true
