[package]
name = "ens_dylib"
version = "0.14.0-dev"
edition = "2021"
description = "Force the Bevy Engine to be dynamically linked for faster linking"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[lib]
crate-type = ["dylib"]

[dependencies]
ens_internal = { path = "../ens_internal", version = "0.14.0-dev", default-features = false }

[lints]
workspace = true
