[package]
name = "ens_hierarchy"
version = "0.14.0-dev"
edition = "2021"
description = "Provides hierarchy functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
default = ["ens_app"]
ens_app = ["dep:ens_app", "ens_core/entity_name"]

[dependencies]
# ens
ens = { path = "../ens", version = "0.14.0-dev", features = ["entity_mapper"], default-features = false }
ens_app = { path = "../ens_app", version = "0.14.0-dev", optional = true }
ens_core = { path = "../ens_core", version = "0.14.0-dev", optional = true }

log = "0.4.21"

smallvec = { version = "1.11", features = ["union", "const_generics"] }

[lints]
workspace = true
