[package]
name = "ens_macro_utils"
version = "0.14.0-dev"
edition = "2021"
description = "A collection of utils for Ens"
homepage = "https://github.com/AxiomaticSemantics/ens"
repository = "https://github.com/AxiomaticSemantics/ens"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
toml_edit = { version = "0.22", default-features = false, features = ["parse"] }
syn = "2.0"
quote = "1.0"
rustc-hash = "1.0"
proc-macro2 = "1.0"

[lints]
workspace = true
