[package]
name = "ens_tasks"
version = "0.14.0-dev"
edition = "2021"
description = "A task executor for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
compute_task_pool = []
async_compute_task_pool = []
io_task_pool = []
multi-threaded = ["concurrent-queue"]
single-threaded = []
simple = []

default = ["single-threaded", "multi-threaded"]

[dependencies]
futures-lite = "2.0.1"
async-executor = "1.8.0"
async-channel = "2.2.0"
async-io = { version = "2.0", optional = true }
async-task = "4.2.0"
concurrent-queue = { version = "2.4", optional = true }

[lints]
workspace = true
