[package]
name = "ens_time"
version = "0.14.0-dev"
edition = "2021"
description = "Provides time functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
default = []
events = ["ens/events", "ens_app/events"]
serialize = ["serde"]

[dependencies]
# ens
ens = { path = "../ens", version = "0.14.0-dev" }
ens_app = { path = "../ens_app", version = "0.14.0-dev" }

# other
log = "0.4.21"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1.0"

[lints]
workspace = true
