[package]
name = "ens_utils"
version = "0.14.0-dev"
edition = "2021"
description = "A collection of utils for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
ens_utils_proc_macros = { version = "0.14.0-dev", path = "macros" }

ahash = "0.8.7"
hashbrown = { version = "0.14", features = ["serde"] }
thread_local = "1.0"

[dev-dependencies]
static_assertions = "1.1.0"

[lints]
workspace = true
