[package]
name = "ens_utils"
version = "0.14.0-dev"
edition = "2021"
description = "A collection of utils for Ens"
homepage = "https://github.com/AxiomaticSemantics/ens"
repository = "https://github.com/AxiomaticSemantics/ens"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
hash = []
parallel = []
default = []

[dependencies]
ens_utils_proc_macros = { version = "0.14.0-dev", path = "macros" }

ahash = "0.8.7"
hashbrown = { version = "0.14", features = [] }
thread_local = "1.0"

[dev-dependencies]
static_assertions = "1.1.0"

[lints]
workspace = true
